/*
 * $Id: ChangeLog,v 1.1986 2004/01/04 04:26:24 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-01-04 11:15 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  + contrib/libct/net.c
    ! functions for CT3 Network subsistem provided by Eduardo Fernandes <eduardo@modalsistemas.com.br>
    Docs for functions includes
  * contrib/libct/Makefile.bc
    contrib/libct/Makefile.vc
    contrib/libct/Makefile
    ! updated makefiles to include net.c 

2004-01-03 20:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * makefile.nt
  * makefile.vc
    + Fixed support for LFLAGS

  * source/rtl/gtwvt/gtwvt.c
    * MSVC type cast.

2004-01-03 19:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/cmdcheck.c
    ! Fixed -gc default to -gc2 instead of -gc3
    (BTW Andi, -gc3 generates a GPF with sample like testole.prg)

  * source/rtl/win32ole.prg
    * Removed | DISPATCH_METHOD from wFlags in HB_FUNC( OLESETPROPERTY )

2004-01-04 02:05 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbapigt.h
    * GTALLEG added for MULTI GT compilation

  * xharbour/source/rtl/gtwin/gtwin.c
    * fixed bug in tone for win9x I introduce recently. Thanks to Andi.

2004-01-03 21:41 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    * Fixed colors BRIGHT_BLUE and BRIGHT_RED to be closest to clipper colors
    + Added application name title

  * source/rtl/dumpvar.prg
    + Added __OutDebug() function
      This function permit to have more (...) parameters to display with
      hb_outdebug()

  * contrib/firebird/make_b32.bat
  * contrib/firebird/makefile.bc
    * Changed for auto creation of fbclient.lib
      ! Set environment var FBDIR=path/of/firebird

2004-01-03 15:04 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.h